# PicrossSAT

./: .gitignore  CMakeLists.txt  Makefile  README.md  board.cpp  board.h  done.txt  io.cpp  io.h  main.cpp  sat.cpp  sat.h  solve.cpp  solve.h  test.cpp
tests/: Makefile  test_io.cpp
